# SilkHomeAssignment

./: .gitignore  README.md  config.toml.sample  pyproject.toml
output/: gentickets.log.txt  issues.json
silkhomeassignment/: __init__.py  gentickets.py  plottickets.py  populatedb.py
